app_manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: gocovid
spec: {}
status: {}
