app_manifests/api_service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy-gocovid
  name: svc-gocovid
  namespace: gocovid
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: deploy-gocovid
  type: NodePort
status:
  loadBalancer: {}
