app_manifests/front_service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front-deploy-gocovid
  name: front-svc-gocovid
  namespace: gocovid
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: front-deploy-gocovid
  type: NodePort
status:
  loadBalancer: {}
